[metadata]
name = sheer
author = CFPB
author-email = tech@consumerfinance.gov
summary = Sheer is a tool for loading arbitrary content into elasticsearch and
    serving that content on the web 
description-file = README.md
license = Public Domain (CC 0)
[files]
packages =
    sheer
[entry_points]
console_scripts =
    sheer = sheer.cli:run_cli
